public/css/home.css
nav{
    display: flex;
    justify-content: start;
}

li{
    list-style: none;
}

/* column styles */
.layout-container{
    display: flex;
}

.column{
    height: 100vh;
}

#column-left, #column-right{
    background-color: #1a1a1a;
    flex: 1;
    padding: 2rem;
}

#column-left{
    display: flex;
    justify-content: baseline;
}

#column-right{
    display: flex;
    flex-direction: column;
    align-items: end;
}

#column-middle{
    display: flex;
    flex:7;
    flex-direction: column;
    align-items: center;
    padding: 2rem;
    border-left: 1px solid rgb(116, 116, 116);
    border-right: 1px solid rgb(116, 116, 116);
}

.bottom-right{
    display: flex;
    flex-direction: column;
    justify-content: end;
}

/* Post Cards */
.posts{
    width: 95%;
    padding-top: 2rem;
}

.post-card{
    display:block;
    background:white;
    padding:1rem;
    border-radius:.5rem;
    color:black;
}

.post-user{
    font-size:1rem;
    color:#ffac30;
    margin-top:.25rem;
}

.post-card:hover{
    background:#f5f5f5;
}

